# ARTSynchronized

./: CMakeLists.txt  Epoche.cpp  Epoche.h  README.md  example.cpp  main.cpp
ART/: N.h  N4.cpp  Tree.cpp  Tree.h
OptimisticLockCoupling/: N.h  Tree.cpp  Tree.h
ROWEX/: N.h  Tree.cpp  Tree.h
